Added some basic styling

--- a/index.html
+++ b/index.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <style>
+        body {
+            background: rgb(255, 230, 8);
+        }
+        #title1 {
+            color: darkblue;
+            font-family: Arial;
+            font-size: 40px;
+            font-weight: bold;
+        }
+
+    </style>
     <title>Hello World</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <span id="title1">Hello World</spand>
 </body>
 </html>
